--- a/src/modules/catalog.html
+++ b/src/modules/catalog.html
@@ -13,11 +13,15 @@
 
         <main class="main">
 
+            <div class="container">
+
                 @include('./pages/catalog/_catalog.html')
 
                 @include('./pages/main/application/_application.html')
 
                 @include('./pages/catalog/catalog-promo/_catalog-promo.html')
+
+            </div>
 
         </main>
 
