--- a/src/modules/pages/main/application/_application.html
+++ b/src/modules/pages/main/application/_application.html
@@ -1,30 +1,35 @@
 <section class="application section" id="application">
-    <div class="container">
-        <div class="application__inner" style="background-image: url('../assets/images/application/get_app@1x.webp')">
 
-            <div class="application__box">
+    <div class="application__inner" style="background-image: url('../assets/images/application/get_app@1x.webp')">
 
-                <h2 class="title application__title">
-                    Завантажте мобільний застосунок
-                </h2>
+        <div class="application__box">
 
-                <div class="application__text">
-                    <p>Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному
-                        місці в зручний час</p>
-                </div>
+            <h2 class="title application__title">
+                Завантажте мобільний застосунок
+            </h2>
 
-                <ul class="application__list">
-                    <li class="application__item">
-                        <a class="application__link application__link--apple" href="#"></a>
-                    </li>
+            <div class="application__text">
 
-                    <li class="application__item">
-                        <a class="application__link application__link--google" href="#"></a>
-                    </li>
-                </ul>
+                <p>Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному
+                    місці в зручний час
+                </p>
 
             </div>
 
+            <ul class="application__list">
+
+                <li class="application__item">
+                    <a class="application__link application__link--apple" href="#"></a>
+                </li>
+
+                <li class="application__item">
+                    <a class="application__link application__link--google" href="#"></a>
+                </li>
+
+            </ul>
+
         </div>
+
     </div>
+
 </section>
