--- a/src/modules/pages/product/product-gallery/_product-gallery.html
+++ b/src/modules/pages/product/product-gallery/_product-gallery.html
@@ -2,12 +2,8 @@
 
     <div class="container">
 
-
-        <div class="product-gallery__img">
-
-        </div>
-
         <div class="wrapper">
+
             <h2 class="title product-gallery__title">
                 Чізбургер з листям салату
             </h2>
@@ -31,16 +27,25 @@
 
 
             <div class="product-gallery__info">
+
                 <h3>
                     Доставка та оплата
                 </h3>
-                <p>
-                    Мінімальна сума замовлення — 160 грн.
-                    Час доставки замовлення — 80-140 мин.
-                    Оплата здійснюється тільки банківською карткою.
-                    Остаточна сума замовлення формується після збору товарів.
-                </p>
-                <a href="#">Детальніше</a>
+
+                <div class="product-gallery__text">
+
+                    <p>
+                        Мінімальна сума замовлення — 160 грн.
+                        Час доставки замовлення — 80-140 мин.
+                        Оплата здійснюється тільки банківською карткою.
+                        Остаточна сума замовлення формується після збору товарів.
+                    </p>
+
+                </div>
+
+
+                <a class="" href="#">Детальніше</a>
+
             </div>
         </div>
     </div>
