--- a/src/modules/product.html
+++ b/src/modules/product.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 @include('./components/head/_head.html')
 
 <body>
 
     <div class="wrapper">
-        @include('./components/header/_header.html')
 
-        @include('./components/breadcrumbs/_breadcrumbs.html')
+        <div class="product">
 
-        <main class="main">
+            @include('./components/header/_header.html')
 
-            @include('./pages/product/product-gallery/_product-gallery.html)
+            @include('./components/breadcrumbs/_breadcrumbs.html')
 
-        </main>
+            <div class="container">
+
+                <main class="main">
+
+                    @include('./pages/product/product-gallery/_product-gallery.html')
+
+                    @include('./pages/product/product-description/_product-description.html')
+
+                </main>
+
+            </div>
+
+            @include('./components/footer/_footer.html')
+
+            @include('./components/scripts/_scripts.html')
+
+        </div>
 
     </div>
-
-    @include('./components/footer/_footer.html')
-
-    @include('./components/scripts/_scripts.html')
 
 </body>
 
