--- a/src/modules/pages/catalog/top-filter/_top-filter.html
+++ b/src/modules/pages/catalog/top-filter/_top-filter.html
@@ -1,29 +1,5 @@
 <div class="top-filter">
 
-    <div class="dropdown-menu">
-
-        <input type="checkbox" id="toggle1" class="dropdown-menu__input">
-        <label for="toggle1" class="dropdown-menu__label">За назвою</label>
-
-        <div class="dropdown-menu__content">
-            <a class="dropdown-menu__link" href="#">За назвою</a>
-            <a class="dropdown-menu__link" href="#">За ціною</a>
-            <a class="dropdown-menu__link" href="#">За розміром</a>
-        </div>
-
-    </div>
-
-    <div class="dropdown">
-
-        <input type="checkbox" id="toggle2" class="dropdown-menu__input">
-        <label for="toggle2" class="dropdown-menu__label">По 12</label>
-
-        <div class="dropdown-menu__content">
-            <a class="dropdown-menu__link" href="#">По 12</a>
-            <a class="dropdown-menu__link" href="#">По 8</a>
-            <a class="dropdown-menu__link" href="#">По 4</a>
-        </div>
-
-    </div>
+    @include('../../../components/dropdown/_dropdown.html')
 
 </div>
