--- a/src/modules/pages/catalog/catalog-offers/_catalog-offers.html
+++ b/src/modules/pages/catalog/catalog-offers/_catalog-offers.html
@@ -4,47 +4,32 @@
         Пропозиції
     </h2>
 
-    <form class="catalog-offers__form" action="#">
+    <div class="checkbox-container">
 
-        <ul class="catalog-offers__list">
+        <input type="checkbox" id="discountCheckbox" class="custom-checkbox">
+        <label for="discountCheckbox" class="custom-checkbox-label">
+            Зі знижкою
+        </label>
 
-            <li class="catalog-offers__checkbox">
+    </div>
 
-                <label class="catalog-checkbox__label" for="discountCheckbox1">
-                    <input class="catalog-checkbox__input" type="checkbox" id="discountCheckbox1"
-                        name="discountCheckbox1">
-                    <span class="catalog-checkbox__checkmark"></span>
-                    <span class="catalog-checkbox__text">Зі знижкою</span>
-                </label>
+    <div class="checkbox-container">
 
-                <!-- <div class="checkbox">
-                    <input class="checkbox__input sr-only" type="checkbox" id="catalog-checkbox[sale]">
-                    <label class="checkbox__label" for="catalog-checkbox[sale]">
-                        Зі знижкою
-                    </label>
-                </div> -->
-            </li>
+        <input type="checkbox" id="newArrivalCheckbox" class="custom-checkbox">
+        <label for="newArrivalCheckbox" class="custom-checkbox-label">
+            Новинка
+        </label>
 
-            <li class="catalog-checkbox">
-                <label class="catalog-checkbox__label" for="discountCheckbox2">
-                    <input class="catalog-checkbox__input" type="checkbox" id="discountCheckbox2"
-                        name="discountCheckbox2" checked>
-                    <span class="catalog-checkbox__checkmark"></span>
-                    <span class="catalog-checkbox__text">Новинка</span>
-                </label>
-            </li>
+    </div>
 
-            <li class="catalog-checkbox">
-                <label class="catalog-checkbox__label" for="discountCheckbox3">
-                    <input class="catalog-checkbox__input" type="checkbox" id="discountCheckbox3"
-                        name="discountCheckbox3">
-                    <span class="catalog-checkbox__checkmark"></span>
-                    <span class="catalog-checkbox__text">Хіт сезону</span>
-                </label>
-            </li>
+    <div class="checkbox-container">
 
-        </ul>
+        <input type="checkbox" id="seasonalHitCheckbox" class="custom-checkbox">
+        <label for="seasonalHitCheckbox" class="custom-checkbox-label">
+            Хіт сезону
+        </label>
 
-    </form>
+    </div>
+
 
 </div>
